##############################################################################
## Makefile.am
##
## Copyright 2011 Johannes Marbach. All rights reserved.
## See the LICENSE file for details.

jRadiodir = $(datadir)/jRadio
jRadio_DATA = station.png

icondir = $(datadir)/icons/hicolor/128x128/apps/
icon_DATA = jRadio.png
 
desktopdir = $(datadir)/applications
desktop_DATA = jRadio.desktop

EXTRA_DIST = $(jRadio_DATA) $(icon_DATA) $(desktop_DATA)
